--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push API image
+      - name: Build and push API image (GHCR)
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -30,7 +30,7 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/gemini-compliance-api:${{ github.ref_name }},ghcr.io/${{ github.repository_owner }}/gemini-compliance-api:latest
-      - name: Build and push Dashboard image
+      - name: Build and push Dashboard image (GHCR)
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -38,3 +38,31 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/gemini-compliance-dashboard:${{ github.ref_name }},ghcr.io/${{ github.repository_owner }}/gemini-compliance-dashboard:latest
+
+      - name: Login to Docker Hub
+        if: ${{ secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '' }}
+        uses: docker/login-action@v2
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push API image (Docker Hub)
+        if: ${{ secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '' }}
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: Dockerfile.api
+          platforms: linux/amd64
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/gemini-compliance-api:${{ github.ref_name }},${{ secrets.DOCKERHUB_USERNAME }}/gemini-compliance-api:latest
+
+      - name: Build and push Dashboard image (Docker Hub)
+        if: ${{ secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '' }}
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: Dockerfile.dashboard
+          platforms: linux/amd64
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/gemini-compliance-dashboard:${{ github.ref_name }},${{ secrets.DOCKERHUB_USERNAME }}/gemini-compliance-dashboard:latest
