--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,25 +7,64 @@ on:
     branches: [ main, master ]
 
 jobs:
-  tests:
+  test:
+    name: Test & Lint
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.10, 3.11, 3.12]
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.12'
+          python-version: ${{ matrix.python-version }}
+
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run tests
-        run: |
-          python -m pytest -q
+          pip install pytest-cov coverage
+          pip install black isort mypy
+
+      - name: Format check (black) 🔧
+        run: black --check .
+
+      - name: Import sort check (isort) 🔧
+        run: isort --check-only .
+
+      - name: Type check (mypy) ⚠️
+        run: mypy src || true
+
+      - name: Run tests with coverage ✅
+        run: pytest --cov=src --cov-report=xml --cov-report=term -q
+
+      - name: Upload coverage to Codecov
+        if: success()
+        uses: codecov/codecov-action@v4
+        with:
+          files: ./coverage.xml
+          fail_ci_if_error: false
+
+      - name: Upload coverage artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: ./coverage.xml
 
   build:
     runs-on: ubuntu-latest
-    needs: tests
+    needs: test
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v4
