--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,7 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-google-generativeai==0.3.2
-streamlit==1.28.1
-plotly==5.17.0
-pandas==2.1.3
-requests==2.31.0
-python-dotenv==1.0.0
-sqlalchemy==2.0.23
-pytest==7.4.0
-jinja2==3.1.2
-pydantic==2.7.2
-python-multipart==0.0.6
-typing-extensions==4.8.0
-httpx==0.23.3
-
-# Optional / dev
-black==24.3.0
-isort==5.12.0
-mypy==1.3.0
+fastapi
+uvicorn
+streamlit
+requests
+python-dotenv
+google-generativeai
+pydantic
