--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,9 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    env:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v4
       - name: Set up QEMU
@@ -40,7 +43,7 @@ jobs:
           tags: ghcr.io/${{ github.repository_owner }}/gemini-compliance-dashboard:${{ github.ref_name }},ghcr.io/${{ github.repository_owner }}/gemini-compliance-dashboard:latest
 
       - name: Login to Docker Hub
-        if: ${{ secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '' }}
+        if: env.DOCKERHUB_USERNAME != '' && env.DOCKERHUB_TOKEN != ''
         uses: docker/login-action@v2
         with:
           registry: docker.io
@@ -48,7 +51,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push API image (Docker Hub)
-        if: ${{ secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '' }}
+        if: env.DOCKERHUB_USERNAME != '' && env.DOCKERHUB_TOKEN != ''
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -58,7 +61,7 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/gemini-compliance-api:${{ github.ref_name }},${{ secrets.DOCKERHUB_USERNAME }}/gemini-compliance-api:latest
 
       - name: Build and push Dashboard image (Docker Hub)
-        if: ${{ secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '' }}
+        if: env.DOCKERHUB_USERNAME != '' && env.DOCKERHUB_TOKEN != ''
         uses: docker/build-push-action@v5
         with:
           context: .
