--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fastapi
-uvicorn
-streamlit
-requests
-python-dotenv
-google-generativeai
-pydantic
-pandas
-plotly
+fastapi>=0.100.0
+uvicorn>=0.23.0
+streamlit>=1.25.0
+requests>=2.31.0
+python-dotenv>=1.0.0
+google-generativeai>=0.3.0
+pydantic>=2.0.0
+pandas>=2.0.0
+plotly>=5.15.0
